# qontract-reconcile

./: .coderabbit.yaml  .coverage.MacBook-Pro.41074.XGkNYhrx  .coverage.MacBook-Pro.76375.XbjnfBXx  .coveragerc  .dockerignore  .gitattributes  .gitignore  .gitleaks.toml  .pylintrc  .tool-versions  AGENTS.md  LICENSE  MANIFEST.in  Makefile  POC_IMPLEMENTATION_GUIDE.md  POC_PLAN.md  README.md  build_deploy.sh  build_deploy_dbs.sh  build_tag.sh  compose.redis.yaml  compose.yaml  config.toml.example  debugging.py  docker-compose.yml  os-upgrade.py  pyproject.toml  renovate.json  requirements-debugger.txt  requirements-dev.txt  requirements-test.txt  requirements-type.txt  requirements.txt  run-test-container-image.sh  setup.cfg  setup.py  test_image_blocking_real_data.py  tox-devel.ini  tox.ini  version
qontract_api/: .env.example  Dockerfile  Makefile  README.md  app.sh  openapi.json  pyproject.toml
qontract_api/docs/adr/: ADR-000-template.md  ADR-001-use-adrs-for-architecture-decisions.md  ADR-002-client-side-graphql-fetching.md  ADR-003-async-only-api-with-blocking-get.md  ADR-004-centralized-rate-limiting-via-hooks.md  ADR-005-sync-only-no-async.md  ADR-006-generic-hook-system-slack-api.md  ADR-007-no-reconcile-changes-migrate-utils.md  ADR-008-client-integration-pattern.md  ADR-009-structured-json-logging.md  ADR-011-dependency-injection-pattern.md  ADR-012-typed-models-over-dicts.md  ADR-013-centralize-external-api-calls.md  ADR-014-three-layer-architecture-for-external-apis.md  ADR-015-cache-update-strategy.md  ADR-016-two-tier-cache.md  README.md
qontract_api/qontract_api/: __init__.py  auth.py  config.py  constants.py  dependencies.py  exceptions.py  health.py  logger.py  main.py  middleware.py  models.py  opa.py  worker.py
qontract_api/qontract_api/aws/: aws_client_factory.py  aws_workspace_client.py  domain.py
qontract_api/qontract_api/cache/: __init__.py  base.py  factory.py  redis.py  workflow_cache.py
qontract_api/qontract_api/event_manager/: __init__.py  _base.py  _factory.py
qontract_api/qontract_api/github/: __init__.py  github_org_client_factory.py  github_org_workspace_client.py
qontract_api/qontract_api/glitchtip/: __init__.py  glitchtip_client_factory.py  glitchtip_workspace_client.py  models.py
qontract_api/qontract_api/integrations/: __init__.py
qontract_api/qontract_api/kubernetes/: cluster_client_map.py  workspace_client.py
qontract_api/qontract_api/rate_limit/: __init__.py  exceptions.py  token_bucket.py
qontract_api/qontract_api/routers/: api_v1.py  integrations.py
qontract_api/qontract_api/scripts/: __init__.py  generate_openapi_spec.py  generate_token.py
qontract_api/qontract_api/secret_manager/: __init__.py  _base.py  _factory.py
qontract_api/qontract_api/secret_reader/: __init__.py  factory.py
qontract_api/qontract_api/slack/: __init__.py  domain.py  models.py  slack_client_factory.py  slack_workspace_client.py
qontract_api/qontract_api/subscriber/: __init__.py  _base.py  _client.py  _formatters.py  _metrics.py  _subscriptions.py
qontract_api/qontract_api/tasks/: __init__.py  _deduplication.py  _utils.py  health.py  metrics.py  utils.py
qontract_api/tests/: __init__.py  conftest.py  test_api.py  test_auth.py  test_config.py  test_event_manager.py  test_exceptions.py  test_health.py  test_logger.py  test_middleware.py  test_opa.py
qontract_api/tests/cache/: __init__.py  test_base.py  test_cache_locking.py  test_redis.py
qontract_api/tests/integrations/: test_github_owners_api.py  test_github_owners_router.py  test_github_owners_service.py  test_glitchtip_project_alerts_models.py  test_glitchtip_project_alerts_router.py  test_glitchtip_project_alerts_service.py  test_glitchtip_service.py  test_pagerduty_workspace_client.py  test_slack_factory.py  test_slack_usergroups_models.py  test_slack_usergroups_router.py  test_slack_usergroups_service.py  test_slack_workspace_client.py  test_slack_workspace_client.py.bak  test_vcs_workspace_client.py
qontract_api/tests/kubernetes/: conftest.py  test_cluster_client_map.py  test_workspace_client.py
qontract_api/tests/rate_limit/: test_token_bucket.py
qontract_api/tests/secret_manager/: test_secret_manager.py
qontract_api/tests/slack/: conftest.py  test_slack_client_factory.py  test_slack_workspace_client.py  test_slack_workspace_client_dm.py
qontract_api/tests/subscriber/: __init__.py  conftest.py  test_client.py  test_dm_notifications.py  test_formatters.py  test_subscriptions.py
qontract_api/tests/tasks/: test_deduplication.py  test_dm_notifications.py  test_github_owners.py  test_glitchtip.py  test_glitchtip_project_alerts.py  test_slack_usergroups.py  test_sso_client.py  test_utils.py
qontract_utils/: Dockerfile  Makefile  pyproject.toml
qontract_utils/qontract_utils/: __init__.py  _httpxyz_compat.py  _structlog_config.py  aws_policy_validator.py  differ.py  exceptions.py  hooks.py  json_utils.py  metrics.py  ruamel.py  templating.py
qontract_utils/qontract_utils/aws_api_typed/: _hooks.py  account.py  api.py  cloudformation.py  dynamodb.py  iam.py  logs.py  organization.py  s3.py  service_quotas.py  sts.py  support.py
qontract_utils/qontract_utils/events/: __init__.py  _brokers.py  _models.py  factory.py  models.py  protocols.py  redis_streams.py
qontract_utils/qontract_utils/github_org/: __init__.py  api.py
qontract_utils/qontract_utils/glitchtip_api/: __init__.py  client.py  models.py
qontract_utils/qontract_utils/internal_groups_api/: __init__.py  api.py  models.py
qontract_utils/qontract_utils/keycloak_api/: __init__.py  _raw_client.py  client.py  models.py
qontract_utils/qontract_utils/kubernetes/: __init__.py  client.py  exceptions.py
qontract_utils/qontract_utils/ldap_api/: __init__.py  api.py  models.py
qontract_utils/qontract_utils/ocm_api/: __init__.py  _raw_client.py  client.py  (+2 more)
qontract_utils/tests/: conftest.py  test_aws_policy_validator.py  test_differ.py  test_glitchtip_api.py  test_hooks.py  test_httpxyz_compat.py  test_json.py  test_pagerduty_api.py  test_ruamel.py  test_slack_api.py  test_slack_api_conversations_open.py
(+2759 files in other folders)
