[project]
name = "qontract-reconcile"
dynamic = ["version"]
description = "Collection of tools to reconcile services with their desired state as defined in the app-interface DB."
authors = [{ name = "Red Hat App-SRE Team", email = "sd-app-sre@redhat.com" }]
license = { text = "Apache 2.0" }
readme = "README.md"
requires-python = "==3.11.*"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "anymarkup>=0.7.0,<0.9.0",
    # keep in sync with boto3-stubs in dependency-groups.type
    "boto3==1.34.94",
    "botocore==1.34.94",
    "Click>=7.0,<9.0",
    "croniter>=1.0.15,<1.1.0",
    "dateparser~=1.1.7",
    "deepdiff==6.7.1",
    "dnspython~=2.1",
    "dt==1.1.73",
    "filetype~=1.2.0",
    "gql==3.1.0",
    "hvac>=0.7.0,<0.8.0",
    "jenkins-job-builder~=4.3.0",
    "Jinja2>=2.10.1,<3.2.0",
    "jira~=3.1",
    "jsonpatch~=1.33",
    "jsonpath-ng==1.5.3",
    "jsonpath-rw>=1.4.0,<1.5.0",
    "jsonpointer~=2.4",
    "kubernetes~=24.0",
    "ldap3>=2.9.1,<2.10.0",
    "MarkupSafe==2.1.1",
    "networkx~=2.8",
    "parse==1.18.0",
    "prometheus-client~=0.8",
    "psycopg2-binary~=2.9",
    "pydantic~=1.10.6",
    "PyGithub>=1.58,<1.59",
    "pyjwt~=2.7",
    "pyOpenSSL~=23.0",
    "pypd>=1.1.0,<1.2.0",
    "python-gitlab==5.6.0",
    "requests-oauthlib~=1.3",
    "requests~=2.32",
    "rich>=13.3.0,<14.0.0",
    "ruamel.yaml>=0.17.22,<0.18.0",
    "semver~=3.0",
    "sendgrid>=6.4.8,<6.5.0",
    "sentry-sdk~=2.0",
    "slack_sdk>=3.10,<4.0",
    "sretoolbox~=2.6",
    "sshtunnel>=0.4.0",
    "tabulate>=0.8.6,<0.9.0",
    "terrascript==0.9.0",
    "toml>=0.10.0,<0.11.0",
    "UnleashClient~=5.11",
    "urllib3~=2.2",
    "websocket-client<0.55.0,>=0.35",
    "yamllint==1.34.0",
]

[dependency-groups]
debugger = ["debugpy ~=1.6.0"]
dev = [
    "anymarkup ~=0.8.1",
    # keep in sync project.dependencies.boto3
    "boto3-stubs[account,dynamodb,ec2,ecr,elb,iam,logs,organizations,rds,route53,s3,service-quotas,sqs,sts,support]==1.34.94",
    "kubernetes-stubs==22.6.0",
    "MarkupSafe ~=2.1.1",
    "moto ~=2.2",
    "mypy ~=1.13.0",
    "pyfakefs ~=5.1",
    "pytest ~=8.3",
    "pytest-cov ~=6.0",
    "pytest-httpserver ~=1.0",
    "pytest-mock ~=3.6",
    "qenerate==0.7.0",
    "responses ~=0.25.0",
    "ruff ~=0.9.0",
    "smtpdfix ~=0.3.3",
    "testslide ~=2.7",
    "typeguard ~=2.13.3",
    "types-click",
    "types-croniter",
    "types-dateparser",
    "types-Jinja2",
    "types-ldap3",
    "types-mock",
    "types-oauthlib",
    "types-psycopg2",
    "types-pyOpenSSL",
    "types-python-dateutil",
    "types-PyYAML",
    "types-requests-oauthlib",
    "types-requests",
    "types-setuptools",
    "types-tabulate",
    "types-toml",
]

[project.scripts]
app-interface-metrics-exporter = "tools.app_interface_metrics_exporter:main"
app-interface-reporter = "tools.app_interface_reporter:main"
glitchtip-access-reporter = "tools.glitchtip_access_reporter:main"
glitchtip-access-revalidation = "tools.glitchtip_access_revalidation:main"
app-sre-tekton-access-reporter = "tools.app_sre_tekton_access_reporter:main"
app-sre-tekton-access-revalidation = "tools.app_sre_tekton_access_revalidation:main"
qontract-cli = "tools.qontract_cli:root"
qontract-reconcile = "reconcile.cli:integration"
run-integration = "reconcile.run_integration:main"
saas-metrics-exporter = "tools.saas_metrics_exporter.main:main"
template-validation = "tools.template_validation:main"

[project.urls]
homepage = "https://github.com/app-sre/qontract-reconcile"
repository = "https://github.com/app-sre/qontract-reconcile"
documentation = "https://github.com/app-sre/qontract-reconcile"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.sdist]
# TODO: package_data={"reconcile": ["templates/*.j2", "gql_queries/*/*.gql"]},
only-include = ["reconcile", "tools"]
exclude = ["*.gql", "**/test/*"]

[tool.hatch.build.targets.wheel]
only-include = ["reconcile", "tools"]
exclude = ["*.gql", "**/test/*"]

[tool.uv-dynamic-versioning]
vcs = "git"
latest-tag = true
# do not add commit hash to version
metadata = false
# do not add dirty flag to version
dirty = false
# version git tag doesn't have a prefix
pattern = "default-unprefixed"
style = "pep440"
# X.Y.(Z+1)
bump = true

[tool.ruff]
line-length = 88
target-version = 'py311'
src = ["reconcile", "tools"]
extend-exclude = ["reconcile/gql_definitions"]
fix = true

[tool.ruff.lint]
preview = true

# defaults are ["E4", "E7", "E9", "F"]
extend-select = [
    # flake8 default rules
    "E1", # preview rule
    "E2", # preview rule
    "W",
    # isort
    "I",
    # pylint
    "PL",
    # pyupgrade
    "UP",
    # flake8-simply
    "SIM",
    # flake8-bugbear
    "B",
    # flake8-comprehensions
    "C4",
    # flake8-future-annotations
    "FA",
    # ruff special rules
    "RUF",
    # flake8-type-checking
    "TC",
    # Perflint
    "PERF",
    # refurb
    "FURB",
]
ignore = [
    "PLR0904", # Too many public methods
    "PLR0911", # Too many return statements
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments
    "PLR0914", # Too many local variables
    "PLR0915", # Too many statements
    "PLR0917", # Too many positional arguments
    "PLR1702", # Too many nested blocks
    "PLR2004", # Magic value used in comparison
    "PLR6301", # Method XXX could be a function, class method, or static method
    "PLW1641", # Object does not implement `__hash__` method
    "PLW2901", # `for` loop variable `v` overwritten by assignment target
    "UP031",   # Use format specifiers instead of percent format
    "SIM102",  # Use a single `if` statement instead of nested `if` statements
    "B017",    #`pytest.raises(Exception)` should be considered evil
    "RUF005",  # Consider "...."instead of concatenation
    "RUF012",  # Mutable class attributes should be annotated with "typing.ClassVar"
    "TC001",   # Type-checking block
    "TC002",   # Type-checking block
    "TC003",   # Type-checking block
    "TC004",   # Type-checking block
    "TC006",   # quoted type expressions in `typing.cast()`
    # Review later
    "FURB101", # Replace `open` with `pathlib.Path`
    "FURB103", # Replace `open` with `pathlib.Path`
]
[tool.ruff.format]
preview = true

[tool.ruff.lint.isort]
known-first-party = ["reconcile", "tools"]

[tool.coverage.run]
branch = true
omit = ["*/test/*"]

[tool.coverage.report]
fail_under = 60

[tool.mypy]
files = ["reconcile", "tools"]
plugins = ["pydantic.mypy"]
# More context here: https://github.com/python/mypy/issues/9091
# Ensure that methods without type definitions are still checked
# Ensure that ignore statements that are no longer doing anything are detected for cleanup
# Enable error codes in Mypy so that specific error codes can be ignored if needed
# Ensure that Python type hints have been defined
enable_error_code = ["truthy-bool", "redundant-expr"]
no_implicit_optional = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
disallow_untyped_defs = true
disallow_incomplete_defs = true


[[tool.mypy.overrides]]
# Untyped modules
module = [
    "reconcile.cli",
    "reconcile.gitlab_housekeeping",
    "reconcile.gitlab_permissions",
    "reconcile.gitlab_projects",
    "reconcile.integrations_manager",
    "reconcile.jenkins_base",
    "reconcile.jenkins_job_builder",
    "reconcile.jenkins_job_builds_cleaner",
    "reconcile.jenkins_job_cleaner",
    "reconcile.jenkins_roles",
    "reconcile.jenkins_webhooks_cleaner",
    "reconcile.jenkins_webhooks",
    "reconcile.jira_watcher",
    "reconcile.mr_client_gateway",
    "reconcile.ocm_additional_routers",
    "reconcile.ocm_addons",
    "reconcile.ocm_aws_infrastructure_access",
    "reconcile.ocm_clusters",
    "reconcile.ocm_external_configuration_labels",
    "reconcile.ocm_github_idp",
    "reconcile.ocm_groups",
    "reconcile.ocm_machine_pools",
    "reconcile.ocm_upgrade_scheduler_org_updater",
    "reconcile.openshift_base",
    "reconcile.openshift_clusterrolebindings",
    "reconcile.openshift_limitranges",
    "reconcile.openshift_namespace_labels",
    "reconcile.openshift_network_policies",
    "reconcile.openshift_resourcequotas",
    "reconcile.openshift_rolebindings",
    "reconcile.openshift_routes",
    "reconcile.openshift_vault_secrets",
    "reconcile.quay_base",
    "reconcile.quay_membership",
    "reconcile.quay_mirror_org",
    "reconcile.quay_mirror",
    "reconcile.quay_permissions",
    "reconcile.quay_repos",
    "reconcile.queries",
    "reconcile.query_validator",
    "reconcile.requests_sender",
    "reconcile.sendgrid_teammates",
    "reconcile.service_dependencies",
    "reconcile.status_page_components",
    "reconcile.status",
    "reconcile.statuspage.atlassian",
    "reconcile.template_tester",
    "reconcile.terraform_aws_route53",
    "reconcile.terraform_cloudflare_resources",
    "reconcile.terraform_users",
    "reconcile.utils.gpg",
    "reconcile.utils.gql",
    "reconcile.utils.helpers",
    "reconcile.utils.imap_client",
    "reconcile.utils.jenkins_api",
    "reconcile.utils.jjb_client",
    "reconcile.utils.ldap_client",
    "reconcile.utils.lean_terraform_client",
    "reconcile.utils.mr.app_interface_reporter",
    "reconcile.utils.mr.aws_access",
    "reconcile.utils.mr.base",
    "reconcile.utils.mr.clusters_updates",
    "reconcile.utils.mr.ocm_upgrade_scheduler_org_updates",
    "reconcile.utils.mr.user_maintenance",
    "reconcile.utils.mr",
    "reconcile.utils.oc",
    "reconcile.utils.ocm_base_client",
    "reconcile.utils.ocm.ocm",
    "reconcile.utils.openshift_resource",
    "reconcile.utils.openssl",
    "reconcile.utils.output",
    "reconcile.utils.password_validator",
    "reconcile.utils.quay_api",
    "reconcile.utils.raw_github_api",
    "reconcile.utils.repo_owners",
    "reconcile.utils.runtime.meta",
    "reconcile.utils.sharding",
    "reconcile.utils.sqs_gateway",
    "reconcile.utils.statuspage.atlassian",
    "reconcile.utils.statuspage.models",
    "reconcile.utils.structs",
    "reconcile.utils.template",
    "reconcile.utils.terraform_client",
    "reconcile.utils.terrascript_aws_client",
    "reconcile.utils.throughput",
    "reconcile.utils.vault",
    "reconcile.utils.vaultsecretref",
    "reconcile.vpc_peerings_validator",
    "tools.sre_checkpoints.util",
    # untyped tests
    "reconcile.test.oc.test_oc_connection_parameters",
    "reconcile.test.oc.test_oc_map",
    "reconcile.test.ocm_labels.test_ocm_labels_integration",
    "reconcile.test.runtime.demo_integration_early_exit",
    "reconcile.test.runtime.test_utils_desired_state_diff",
    "reconcile.test.runtime.test_utils_integration",
    "reconcile.test.runtime.test_utils_runtime_environment",
    "reconcile.test.runtime.test_utils_runtime_runner",
    "reconcile.test.saas_auto_promotions_manager.merge_request_manager.merge_request_manager.conftest",
    "reconcile.test.saas_auto_promotions_manager.merge_request_manager.merge_request_manager.test_housekeeping",
    "reconcile.test.saas_auto_promotions_manager.merge_request_manager.merge_request_manager.test_merge_request_manager",
    "reconcile.test.saas_auto_promotions_manager.merge_request_manager.renderer.test_content_multiple_namespaces",
    "reconcile.test.saas_auto_promotions_manager.merge_request_manager.renderer.test_content_single_namespace",
    "reconcile.test.saas_auto_promotions_manager.merge_request_manager.renderer.test_content_single_target",
    "reconcile.test.saas_auto_promotions_manager.merge_request_manager.renderer.test_json_path_selector",
    "reconcile.test.saas_auto_promotions_manager.subscriber.test_content_hash",
    "reconcile.test.saas_auto_promotions_manager.subscriber.test_multiple_channels_config_hash",
    "reconcile.test.saas_auto_promotions_manager.subscriber.test_multiple_channels_moving_ref",
    "reconcile.test.saas_auto_promotions_manager.subscriber.test_multiple_publishers_moving_ref",
    "reconcile.test.saas_auto_promotions_manager.subscriber.test_single_channel_with_single_publisher",
    "reconcile.test.saas_auto_promotions_manager.test_integration_test",
    "reconcile.test.saas_auto_promotions_manager.utils.saas_files_inventory.test_multiple_publishers_for_single_channel",
    "reconcile.test.saas_auto_promotions_manager.utils.saas_files_inventory.test_saas_files_use_target_config_hash",
    "reconcile.test.saas_auto_promotions_manager.utils.saas_files_inventory.test_saas_files_with_auto_promote",
    "reconcile.test.saas_auto_promotions_manager.utils.saas_files_inventory.test_saas_files_without_auto_promote",
    "reconcile.test.statuspage.fixtures",
    "reconcile.test.statuspage.test_statuspage_atlassian",
    "reconcile.test.statuspage.test_statuspage_page",
    "reconcile.test.statuspage.test_statuspage_state",
    "reconcile.test.statuspage.test_statuspage_status",
    "reconcile.test.test_acs_rbac",
    "reconcile.test.test_checkpoint",
    "reconcile.test.test_cli",
    "reconcile.test.test_closedbox_endpoint_monitoring",
    "reconcile.test.test_dashdotdb_dora",
    "reconcile.test.test_database_access_manager",
    "reconcile.test.test_gitlab_housekeeping",
    "reconcile.test.test_gitlab_members",
    "reconcile.test.test_integrations_manager",
    "reconcile.test.test_jenkins_worker_fleets",
    "reconcile.test.test_jump_host",
    "reconcile.test.test_make",
    "reconcile.test.test_ocm_additional_routers",
    "reconcile.test.test_ocm_clusters_manifest_updates",
    "reconcile.test.test_ocm_clusters",
    "reconcile.test.test_ocm_machine_pools",
    "reconcile.test.test_ocm_update_recommended_version",
    "reconcile.test.test_ocm_upgrade_scheduler_org_updater",
    "reconcile.test.test_openshift_base",
    "reconcile.test.test_openshift_namespace_labels",
    "reconcile.test.test_openshift_namespaces",
    "reconcile.test.test_openshift_resource",
    "reconcile.test.test_openshift_resources_base",
    "reconcile.test.test_openshift_saas_deploy_change_tester",
    "reconcile.test.test_openshift_saas_deploy",
    "reconcile.test.test_openshift_upgrade_watcher",
    "reconcile.test.test_prometheus_rules_tester",
    "reconcile.test.test_quay_membership",
    "reconcile.test.test_quay_mirror_org",
    "reconcile.test.test_quay_mirror",
    "reconcile.test.test_quay_repos",
    "reconcile.test.test_repo_owners",
    "reconcile.test.test_requests_sender",
    "reconcile.test.test_saasherder_allowed_secret_paths",
    "reconcile.test.test_secret_reader",
    "reconcile.test.test_slack_base",
    "reconcile.test.test_slack_usergroups",
    "reconcile.test.test_terraform_cloudflare_dns",
    "reconcile.test.test_terraform_cloudflare_resources",
    "reconcile.test.test_terraform_cloudflare_users",
    "reconcile.test.test_terraform_repo",
    "reconcile.test.test_terraform_resources",
    "reconcile.test.test_terraform_users",
    "reconcile.test.test_three_way_diff_strategy",
    "reconcile.test.test_typed_queries.conftest",
    "reconcile.test.test_typed_queries.test_clusters_with_peering",
    "reconcile.test.test_typed_queries.test_status_board",
    "reconcile.test.test_vault_replication",
    "reconcile.test.test_vault_utils",
    "reconcile.test.test_version_bump",
    "reconcile.test.test_vpc_peerings_validator",
    "reconcile.test.test_wrong_region",
    "reconcile.test.utils.internal_groups.test_internal_groups_client",
    "reconcile.test.utils.test_aws_rds",
    "reconcile.test.utils.test_expiration",
    "reconcile.test.utils.test_external_resource_spec",
    "reconcile.test.utils.test_external_resources",
    "reconcile.test.utils.test_github_api",
    "reconcile.test.utils.test_gpg",
    "reconcile.test.utils.test_gql",
    "reconcile.test.utils.test_grouping",
    "reconcile.test.utils.test_helm",
    "reconcile.test.utils.test_helpers",
    "reconcile.test.utils.test_imap_client",
    "reconcile.test.utils.test_jira_client",
    "reconcile.test.utils.test_jjb_client",
    "reconcile.test.utils.test_jsonpath",
    "reconcile.test.utils.test_models",
    "reconcile.test.utils.test_mr_clusters_updates",
    "reconcile.test.utils.test_mr",
    "reconcile.test.utils.test_oc",
    "reconcile.test.utils.test_ocm",
    "reconcile.test.utils.test_pagerduty_api",
    "reconcile.test.utils.test_parse_dhms_duration",
    "reconcile.test.utils.test_password_validator",
    "reconcile.test.utils.test_promotion_state",
    "reconcile.test.utils.test_quay_api",
    "reconcile.test.utils.test_semver_helper",
    "reconcile.test.utils.test_sharding",
    "reconcile.test.utils.test_smtp_client",
    "reconcile.test.utils.test_terraform_client",
    "reconcile.test.utils.test_terraform_config_client",
    "reconcile.test.utils.test_terraform",
    "reconcile.test.utils.test_terrascript_aws_client",
    "reconcile.test.utils.test_terrascript_cloudflare_client",
    "reconcile.test.utils.test_terrascript_cloudflare_resources",
]
check_untyped_defs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false


[[tool.mypy.overrides]]
# Below are all of the packages that don't implement stub packages. Mypy will throw an error if we don't ignore the
# missing imports. See: https://mypy.readthedocs.io/en/stable/running_mypy.html#missing-imports
module = [
    "anymarkup.*",
    "deepdiff.*",
    "dns.*",
    "dynatrace.*",
    "filetype.*",
    "github.*",
    "gitlab.*",
    "graphqlclient.*",
    "httpretty.*",
    "hvac.*",
    "jenkins_jobs.*",
    "jira.*",
    "jsonpath_ng.*",
    "kubernetes.*",
    "matplotlib",
    "matplotlib.*",
    "moto.*",
    "networkx.*",
    "openshift.*",
    "parse.*",
    "prometheus_client.*",
    "pygments.*",
    "pypd.*",
    "pytest_httpserver.*",
    "pytest_mock.*",
    "pytest.*",
    "python_terraform.*",
    "responses.*",
    "ruamel.*",
    "semver.*",
    "sendgrid.*",
    "sentry_sdk.*",
    "sretoolbox.*",
    "sshtunnel.*",
    "terrascript.*",
    "testslide.*",
    "UnleashClient.*",
    "urllib3.*",
    "werkzeug.*",
]
ignore_missing_imports = true
