[project]
name = "qontract-api"
version = "0.1.0"
description = "REST API service for qontract reconciliation"
authors = [{ name = "Red Hat App-SRE Team", email = "sd-app-sre@redhat.com" }]
license = { text = "Apache 2.0" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.121.1",
    "uvicorn[standard]==0.38.0",
    "celery==5.5.3",
    "redis==7.0.1",
    "pydantic==2.12.4",
    "pydantic-settings==2.12.0",
    "python-jose[cryptography]==3.5.0",
]


[dependency-groups]
dev = [
    # development and testing tools
    "mypy==1.18.2",
    "pytest==9.0.1",
    "pytest-cov==7.0.0",
    "ruff==0.14.4",
]

[tool.uv.sources]
qontract-reconcile = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qontract_api"]

[[tool.mypy.overrides]]
# Below are all of the packages that don't implement stub packages. Mypy will throw an error if we don't ignore the
# missing imports. See: https://mypy.readthedocs.io/en/stable/running_mypy.html#missing-imports
module = ["celery.*"]
ignore_missing_imports = true
