[project]
name = "qontract-api"
version = "0.1.0"
description = "REST API service for qontract reconciliation"
authors = [{ name = "Red Hat App-SRE Team", email = "sd-app-sre@redhat.com" }]
license = { text = "Apache 2.0" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cachetools==6.2.2",
    "celery==5.5.3",
    "cloudevents==1.12.0",
    "fastapi==0.121.1",
    "faststream[cli,redis]==0.6.6",
    "prometheus-client==0.23.1",
    "prometheus-fastapi-instrumentator==7.1.0",
    "pydantic-settings==2.12.0",
    "pydantic==2.12.4",
    "python-jose[cryptography]==3.5.0",
    "qontract-api-client",
    "qontract-utils",
    "redis==7.1.0",
    "sentry-sdk==2.51.0",
    "structlog==25.5.0",
    "uvicorn[standard]==0.38.0",
]


[dependency-groups]
dev = [
    # development and testing tools
    "httpx==0.28.1",
    "mypy==1.19.1",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest==9.0.2",
    "rich==14.3.1",
    "ruff==0.14.13",
    "types-cachetools==6.2.0.20251022",
    "types-hvac==2.4.0.20251115",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qontract_api"]

[tool.ruff]
line-length = 88
target-version = 'py312'
src = ["qontract_api"]
fix = true

[tool.ruff.format]
preview = true

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "ANN401",   # allow typings.Any
    "ASYNC109", # Async function with timeout parameter (false positive for FastAPI Query params)
    "CPY",      # Missing copyright header
    "D100",     # Missing docstring in public module
    "D101",     # Missing docstring in public class
    "D102",     # Missing docstring in public method
    "D103",     # Missing docstring in public function
    "D104",     # Missing docstring in public package
    "D105",     # Missing docstring in magic method
    "D106",     # Missing docstring in nested public class
    "D107",     # Missing docstring in __init__
    "D203",     # 1 blank line required before class docstring
    "D211",     # No blank lines allowed before class docstring
    "D212",     # multi-line-summary-first-line
    "D213",     # multi-line-summary-second-line
    "D4",       # Doc string style
    "E501",     # Line too long
    "FIX002",   # TODO comment found
    "G004",     # Logging statement uses f-string
    "PLR0904",  # Too many public methods
    "PLR0913",  # Too many arguments
    "PLR0917",  # Too many positional arguments
    "RUF067",   # `__init__` module should only contain docstrings and re-exports
    "S101",     # Use of assert detected. Pytest uses assert
    "S404",     # subprocess import
    "EM101",    # Exception must not use a string literal, assign to variable first
    "EM102",    # Exception must not use an f-string literal, assign to variable first
    "TRY003",   # Avoid specifying long messages outside the exception class
    "TRY300",   # try-consider-else
    "TC002",    # type-checking-block
    "TC003",    # type-checking-block
    # pydoclint
    "DOC",
    # May conflict with the formatter, https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q",
    "COM812",
    "COM819",
    "ISC001",
    # remove me
    "TD", # TODO found
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "ARG001",  # Unused argument (common in test fixtures)
    "FBT001",  # Boolean positional args acceptable in parametrized tests
    "PLC0415", # Import not at top level (lazy imports in tests)
    "PLR2004", # Magic value in comparison (acceptable in tests)
    "PLC1901", # xxx == "" (common in tests for empty string checks)
    "PLC2701", # import from private module (testing internal state)
    "PLR6301", # Method could be function/classmethod/staticmethod (pytest uses instance methods)
    "PT012",   # pytest.raises with multiple statements (acceptable pattern)
    "RUF043",  # Regex metacharacters in pytest.raises match (intentional in tests)
    "S105",    # Possible hardcoded password assigned (test fixtures)
    "S106",    # Possible hardcoded password (test fixtures use hardcoded values)
    "SLF001",  # Private member access (testing internal state)
]
[tool.ruff.lint.isort]
known-first-party = ["qontract_api"]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod"]

[tool.mypy]
files = ["qontract_api", "tests"]
plugins = ["pydantic.mypy"]
# More context here: https://github.com/python/mypy/issues/9091
# Ensure that methods without type definitions are still checked
# Ensure that ignore statements that are no longer doing anything are detected for cleanup
# Enable error codes in Mypy so that specific error codes can be ignored if needed
# Ensure that Python type hints have been defined
enable_error_code = ["truthy-bool", "redundant-expr"]
no_implicit_optional = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
# Below are all of the packages that don't implement stub packages. Mypy will throw an error if we don't ignore the
# missing imports. See: https://mypy.readthedocs.io/en/stable/running_mypy.html#missing-imports
module = ["celery.*", "jose", "billiard.einfo.*"]
ignore_missing_imports = true

# [tool.coverage.report]
# fail_under = 90
