[project]
name = "qontract-utils"
version = "0.1.0"
description = "Shared utilities for qontract-reconcile and qontract-api"
requires-python = ">=3.12"
dependencies = [
    "hvac==2.4.0",
    "pagerduty==6.1.0",
    "prometheus-client==0.23.1",
    "pydantic==2.12.4",
    "pygithub==1.58.2",
    "python-gitlab==6.0.0",
    "requests==2.32.5",
    "ruamel-yaml==0.17.40",
    "slack_sdk==3.38",
    "stamina==25.2.0",
    "structlog==25.5.0",
]

[dependency-groups]
dev = [
    # development and testing tools
    "httpx==0.28.1",
    "mypy==1.19.1",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest==9.0.2",
    "ruff==0.14.13",
    "types-hvac>=2.4.0.20251115",
    "tzdata==2025.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["qontract_utils"]
fix = true

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "ANN401",  # allow typings.Any
    "CPY",     # Missing copyright header
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "D104",    # Missing docstring in public package
    "D105",    # Missing docstring in magic method
    "D106",    # Missing docstring in nested public class
    "D107",    # Missing docstring in __init__
    "D203",    # 1 blank line required before class docstring
    "D211",    # No blank lines allowed before class docstring
    "D212",    # multi-line-summary-first-line
    "D213",    # multi-line-summary-second-line
    "D4",      # Doc string style
    "E501",    # Line too long
    "FIX002",  # TODO comment found
    "G004",    # Logging statement uses f-string
    "PLR0904", # Too many public methods
    "PLR0913", # Too many arguments
    "PLR0917", # Too many positional arguments
    "S101",    # Use of assert detected. Pytest uses assert
    "S404",    # subprocess import
    "EM101",   # Exception must not use a string literal, assign to variable first
    "EM102",   # Exception must not use an f-string literal, assign to variable first
    "TRY003",  # Avoid specifying long messages outside the exception class
    "TRY300",  # try-consider-else
    "TC002",   # type-checking-block
    "TC003",   # type-checking-block
    # pydoclint
    "DOC",
    # May conflict with the formatter, https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q",
    "COM812",
    "COM819",
    "ISC001",
    # remove me
    "TD", # TODO found
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "PLC0415", # Import not at top level (lazy imports in tests)
    "PLR2004", # Magic value in comparison (acceptable in tests)
    "PLR6301", # Method could be function/classmethod/staticmethod (pytest uses instance methods)
    "PT012",   # pytest.raises with multiple statements (acceptable pattern)
    "RUF043",  # Regex metacharacters in pytest.raises match (intentional in tests)
    "S105",    # Possible hardcoded password assigned (test fixtures)
    "S106",    # Possible hardcoded password (test fixtures use hardcoded values)
    "SLF001",  # Private member access (testing internal state)
]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.mypy]
files = ["qontract_utils"]
plugins = ["pydantic.mypy"]
# More context here: https://github.com/python/mypy/issues/9091
# Ensure that methods without type definitions are still checked
# Ensure that ignore statements that are no longer doing anything are detected for cleanup
# Enable error codes in Mypy so that specific error codes can be ignored if needed
# Ensure that Python type hints have been defined
enable_error_code = ["truthy-bool", "redundant-expr"]
no_implicit_optional = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
